(master) Update to Java 21.